# base-cpp-project

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: CPM.cmake  abseil.cmake  benchmark.cmake  doctest.cmake  libcoro.cmake  nlohmann_json.cmake  pegtl.cmake
python/: CMakeLists.txt
python/src/: main.cpp
python/tests/: test_basic.py
src/: CMakeLists.txt  absl_hash.h  cards.h  example.cpp
tests/: CMakeLists.txt  example_bm.cpp  example_test.cpp
